# ToDo-list

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
app/: __init__.py  logged_tasks_handler.py  page_indexer.py  task.py  tasks_handler.py  views.py
app/templates/: add_task.html  base.html  pagination.html  tasks.html
tests/app/: conftest.py  test_logged_tasks_handler.py  test_page_indexer.py  test_tasks_handler.py  test_views.py
