[tool.poetry]
name = "homework3"
version = "1.0.0"
description = "ToDo list"
authors = ["Parviz Karimov <karimov.pd@phystech.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = "^22.1"
unify = "^0.5"
flake8 = "^4.0"
pylint = "^2.12.1"
mypy = "^0.940"
pytest-deadfixtures = "^2.2.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

